--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/pixi.js": "^4.8.0",
+    "fuse.js": "^3.2.1",
     "http": "0.0.0",
     "pixi.js": "^4.8.2",
     "serve": "^9.6.0",
